# busibox

./: .cursorrules  .dockerignore  .env copy 2.local  .env copy.local  .gitignore  APPLICATION_SECRETS_FIX.md  CLAUDE.md  COMPLETE_FIX_SUMMARY.md  DEPLOYMENT_SERVICE_IMPLEMENTATION.md  DEPLOYMENT_SUMMARY.md  DEPLOY_CHUNKING_FIXES.md  EXTERNAL_ACCESS.md  INSTALL_UBUNTU_24.04.md  Makefile  PROXMOX_INSTALL_FIXES_COMPLETE.md  QUICKSTART.md  README.md  SEARCH_API_COMPLETE.md  TESTING.md  VAULT_ENVIRONMENT_SPECIFIC_FIX.md  allow-external-access.sh  deploy-llm-stack.sh  docker-compose.dev.yml  docker-compose.github.yml  docker-compose.local-dev-legacy.yml  docker-compose.local-dev.yml  docker-compose.local.yml  docker-compose.original-dev.yml  docker-compose.prod.yml  docker-compose.yml  env.local.example  install_part1_sudo.sh  install_part2_user.sh  install_ubuntu_24.sh  main  main.rs  package-lock.json  rustc  setup-proxmox-host.sh  test-infrastructure.sh  (+3 more)
cli/: Cargo.toml
cli/busibox/: Cargo.toml  build.rs
cli/busibox-core/: Cargo.toml
cli/busibox-core/examples/: print-vault-password.rs
cli/busibox-core/src/: deploy.rs  hardware.rs  health.rs  lib.rs  profile.rs  services.rs  shell.rs  vault.rs
cli/busibox-providers/: Cargo.toml
cli/busibox-providers/src/: lib.rs
cli/busibox-providers/src/backend/: docker.rs  k8s.rs  mod.rs  proxmox.rs
cli/busibox-providers/src/executor/: local.rs  mod.rs  ssh.rs
cli/busibox-providers/src/gpu/: cloud.rs  cuda.rs  mlx.rs  mod.rs
cli/busibox-quick/: Cargo.toml
cli/busibox-quick/src/: main.rs
cli/busibox/src/: app.rs  main.rs  theme.rs  tui.rs
cli/busibox/src/modules/: benchmark.rs  hardware.rs  health.rs  mkcert.rs  mod.rs  models.rs  profile.rs  remote.rs  ssh.rs  tailscale.rs  vault.rs
cli/busibox/src/screens/: admin_login.rs  hardware_report.rs  install.rs  k8s_manage.rs  k8s_setup.rs  manage.rs  mod.rs  model_benchmark.rs  model_config.rs  model_download.rs  models_manage.rs  profile_edit.rs  profile_select.rs  setup_mode.rs  ssh_setup.rs  tailscale_setup.rs  validate_secrets.rs  welcome.rs
srv/agent/: .env.example  .gitignore  AGENT-CLIENT-INTEGRATION.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-CLEANUP-FIX.md  DEPLOYMENT-FIXES.md  DEPLOYMENT-ROLE-COMPLETE.md  DEPLOYMENT-SUCCESS.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION-COMPLETE.md  LITELLM-INTEGRATION-SUCCESS.md  LOCAL-TEST-RESULTS.md  Makefile  PHASE3-US1-COMPLETE.md  README.md  READY-FOR-DEPLOYMENT.md  SETUP-COMPLETE.md  TEST-FIXES-COMPLETE.md  TESTING.md  WEATHER-AGENT-STATUS.md  alembic.ini  pyproject.toml  pytest.ini  requirements.test.txt  requirements.txt
srv/agent/alembic/: env.py
srv/agent/alembic/versions/: 20251210_2053_001_initial_schema.py  20251211_0000_002_agent_enhancements.py  20251212_0000_003_add_conversations.py  20251216_0000_004_fix_dispatcher_log_timezone.py  20251217_0000_005_workflow_enhancements.py  20260113_0000_006_add_tool_configs.py  20260114_0000_007_add_conversation_source.py  20260118_0001_rename_workflow_to_workflows.py  20260121_0000_010_add_output_saving_config.py  20260121_0001_011_add_workflow_id_to_tasks.py  20260121_0002_012_add_task_notifications.py  20260210_0000_002_chat_extensions.py  20260211_0000_003_agent_frontier_fallback.py  20260214_0000_004_task_library_fields.py  20260221_0000_005_eval_datasets_scenarios_scores.py  20260318_0000_006_agent_mcp_servers.py  20260329_0000_007_chat_settings_insights_enabled.py  20260413_0000_008_agent_visibility.py  pre_002_grant_permissions.sql
srv/agent/app/: main.py  schema.py
srv/agent/app/agents/: attachment_agent.py  base_agent.py  chat_agent.py  core.py  dispatcher.py  document_agent.py  dynamic_loader.py  image_agent.py  rag_search_agent.py  rfp_agent.py  schema_builder_agent.py  status_agent.py  streaming_agent.py  summary_comparison_agent.py  template_generator_agent.py  template_improvement_agent.py  test_agent.py  transcription_agent.py  voice_agent.py  weather_agent.py  web_search_agent.py  web_search_agent_streaming.py
srv/agent/app/api/: agents.py  auth.py  chat.py  classify_tags.py  conversations.py  dispatcher.py  evals.py  execution_streams.py  extraction.py  health.py  insights.py  llm.py  runs.py  scores.py  streams.py  tasks.py  tools.py  webhooks.py  workflows.py
srv/agent/app/auth/: dependencies.py  token_exchange.py  tokens.py
srv/agent/app/clients/: __init__.py  busibox.py  ingest_client.py  search_client.py
srv/agent/app/config/: settings.py
srv/agent/app/core/: logging.py
srv/agent/app/db/: schema.sql  session.py
srv/agent/app/models/: dispatcher_log.py  domain.py
srv/agent/app/schemas/: attachment.py  auth.py  conversation.py  definitions.py  dispatcher.py  insights.py  run.py  streaming.py  task.py  template.py
srv/agent/app/services/: agent_registry.py  agent_visibility.py  agentic_dispatcher.py  attachment_resolver.py  builtin_agents.py  builtin_tools.py  builtin_workflows.py  chat_benchmark.py  chat_executor.py  context_compression.py  dispatcher_service.py  eval_analysis.py  eval_runner.py  insights_generator.py  insights_service.py  load_monitor.py  mcp_client.py  model_selector.py  output_summarizer.py  platform_config.py  run_provenance.py  run_service.py  scheduler.py  scorer_service.py  skills_service.py  streaming_dispatcher.py  task_service.py  token_service.py  version_isolation.py
srv/agent/app/tools/: calendar_tool.py  data_tool.py  document_search_tool.py  extraction_schema_tool.py  graph_tool.py  image_tool.py  (+14 more)
srv/agent/scripts/: cleanup_test_agents.py  fix-dispatcher-timezone.py  fix-migration-state.sh  run-migrations.sh  run-tests.sh  seed_builtin_agents.py  setup-venv.sh  test-insights-manual.sh  test-insights-with-auth.sh  validate-deployment.sh
srv/agent/src/: main.py
srv/agent/tests/: conftest.py  test_health.py  test_pvt.py
srv/shared/: README.md  __init__.py  pyproject.toml  setup.py  test_schema_manager.py
srv/shared/busibox_common/: __init__.py  auth.py  db.py  llm.py  pool.py  test_mode.py
srv/shared/testing/: __init__.py  auth.py  database.py  environment.py  fixtures.py  pytest_failed_filter.py
(+1816 files in other folders)
