[workspace]
members = [
    "busibox",
    "busibox-core",
    "busibox-providers",
    "busibox-quick",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"
which = "7"
regex = "1"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
rpassword = "7"
rand = "0.8"
libc = "0.2"
sysinfo = "0.33"

# Workspace crates
busibox-core = { path = "busibox-core" }
busibox-providers = { path = "busibox-providers" }

[profile.release]
strip = true
lto = true
