[package]
name = "busibox-providers"
description = "Backend, GPU, and executor provider implementations for Busibox CLI"
edition.workspace = true
version.workspace = true

[dependencies]
busibox-core = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
regex = { workspace = true }
