[package]
name = "busibox-cli"
description = "Busibox infrastructure CLI with TUI"
edition.workspace = true
version.workspace = true

[[bin]]
name = "busibox"
path = "src/main.rs"

[dependencies]
busibox-core = { workspace = true }
busibox-providers = { workspace = true }
ctrlc = "3"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { version = "4", features = ["derive"] }
color-eyre = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
sysinfo = { workspace = true }
regex = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
rpassword = { workspace = true }
rand = { workspace = true }
libc = { workspace = true }
