## Python project configuration for the rebuilt agent server
[project]
name = "agent-server"
version = "0.1.0"
description = "FastAPI + Pydantic AI agent server for Busibox"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.5",
  "uvicorn>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "pydantic-ai>=0.0.20",
  "httpx>=0.27.2",
  "sqlalchemy>=2.0.35",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "python-jose[cryptography]>=3.3.0",
  "redis>=5.0.8",
  "apscheduler>=3.10.4",
  "sse-starlette>=2.1.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-exporter-otlp>=1.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.2",
  "ruff>=0.6.9",
  "mypy>=1.13.0",
]

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000
reload = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
