[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "busibox-common"
version = "0.1.0"
description = "Shared utilities for Busibox services"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
asyncpg = ["asyncpg>=0.29"]
alembic = ["alembic>=1.13"]
full = [
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["busibox_common*"]
